--- a/package.json
+++ b/package.json
@@ -62,5 +62,10 @@
   "lint-staged": {
     "*.{js,ts,mjs,json,md,yml,yaml}": "yarn run prettier --write",
     "*.{ts,js,mjs}": "yarn run eslint --fix"
+  },
+  "overrides": {
+    "cross-spawn": "7.0.5",
+    "path-to-regexp": "0.1.12",
+    "axios": "1.8.2"
   }
 }
