--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/source-map-support": "^0",
     "@types/supertest": "^6.0.2",
     "@types/wait-on": "^5.3.4",
-    "axios": "^1.7.7",
+    "axios": "^1.8.2",
     "axios-mock-adapter": "^1.22.0",
     "concurrently": "^8.2.2",
     "eslint": "^9.14.0",
@@ -63,9 +63,8 @@
     "*.{js,ts,mjs,json,md,yml,yaml}": "yarn run prettier --write",
     "*.{ts,js,mjs}": "yarn run eslint --fix"
   },
-  "overrides": {
+  "resolutions": {
     "cross-spawn": "7.0.5",
-    "path-to-regexp": "0.1.12",
-    "axios": "1.8.2"
+    "path-to-regexp": "0.1.12"
   }
 }
