--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "resolutions": {
     "cross-spawn": "7.0.5",
-    "path-to-regexp": "0.1.12"
+    "path-to-regexp": "0.1.12",
+    "axios": "^1.8.2"
   }
 }
